Adding final touches to the pages

--- a/answer.html
+++ b/answer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>The Answer</title>
+    <title>HCH Brochure Answer</title>
 </head>
 <body>
 
@@ -14,9 +14,10 @@
     </script>
 
     <div class="answer-container">
-        <h2>Congratulations to you!</h2>
-        <p>You have found the secret flag:</p>
-        <h3>FLAG{s3ss10n_st0r4g3_p0w3r}</h3>
+        <h2>Congratulations!</h2>
+        <p>You've successfully retrieved the next clue. 
+            Solve the puzzle to unlock passphrase.</p>
+        <h3>Punetr bs gur Yvtug Oevtnqr</h3>
     </div>
 
 </body>
