updated answer file

--- a/answer.html
+++ b/answer.html
@@ -16,7 +16,7 @@
     <div class="answer-container">
         <h2>Congratulations!</h2>
         <p>You've successfully retrieved the next clue. 
-            Solve the puzzle to unlock passphrase.</p>
+            Solve the puzzle to unlock the passphrase.</p>
         <h3>Punetr bs gur Yvtug Oevtnqr</h3>
     </div>
 
