--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Healthcare Hacking Challenge Calvery Brochure</title>
+    <title>Healthcare Hacking Challenges</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="login-container">
         <h2>Brochure Credentials</h2>
-        <form id="loginForm">
-            <input type="text" id="username" placeholder="Username">
-            <input type="password" id="password" placeholder="Password">
-            <button type="submit">Login</button>
-        </form>
-    </div>
-
+      <a href="pdfmetadata.html">Go to Brochure Login Page</a>
     <script src="script.js"></script>
 </body>
 </html>
