Made and ordered list

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <h2>Brochure Credentials</h2>
-      <a href="pdfmetadata.html">Go to Brochure Login Page</a>
-    <script src="script.js"></script>
+    <ol>
+        <li>Brochure Credentials</li>
+        <li><a href="pdfmetadata.html">Go to Brochure Login Page</a></li>
+    </ol>
 </body>
 </html>
