Fixed formating on the homepage and answerpage.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ol>
-        <li>Brochure Credentials</li>
-        <li><a href="pdfmetadata.html">Go to Brochure Login Page</a></li>
-    </ol>
+    <div class="list-text">
+        <p><h2>Welcome to the Healthcare Hacking Challenges!</h2></p>
+        <p>Embark on a journey to uncover hidden clues and solve puzzles related to healthcare security. </p><p>Start by accessing the CTF and following the questions repective links below.</p>
+        <p><ul>
+            <li><b>Brochure Credentials</b></li>
+            <ol>
+                <li><a href="pdfmetadata.html">Go to Brochure Login Page</a></li>
+            </ol>
+        </ul></p>
+    </div>    
 </body>
 </html>
