Updated site for challenge 7

--- a/answer.html
+++ b/answer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HCH Brochure Answer</title>
+    <title>Challenge 7: The Rogue Website</title>
 </head>
 <body>
 
@@ -16,8 +16,9 @@
     <div class="answer-container">
         <h2>Congratulations!</h2>
         <p>You've successfully retrieved the next clue. 
-            Solve the puzzle to unlock the passphrase.</p>
-        <h3>Punetr bs gur Yvtug Oevtnqr</h3>
+            download teh PCAP file to solve Challenge 8.</p>
+        <p>The flag for challenege 7 is:</p>
+        <h3>cuvfurq_gur_cuvfure</h3>
     </div>
 
 </body>
