--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <p><h2>Welcome to the Healthcare Hacking Challenges!</h2></p>
         <p>Embark on a journey to uncover hidden clues and solve puzzles related to healthcare security. </p><p>Start by accessing the CTF and following the questions repective links below.</p>
         <p><ul>
-            <li><b>Brochure Credentials</b></li>
+            <li><b>Challenge 7: The Rogue Website</b></li>
             <ol>
-                <li><a href="pdfmetadata.html">Go to Brochure Login Page</a></li>
+                <li><a href="challenge7.html">Go to Challenge 7</a></li>
             </ol>
         </ul></p>
     </div>    
