--- a/answer.html
+++ b/answer.html
@@ -16,7 +16,7 @@
     <div class="answer-container">
         <h2>Congratulations!</h2>
         <p>You've successfully retrieved the next clue. 
-            download teh PCAP file to solve Challenge 8.</p>
+            <br><a href="hospital_network_traffic.pcap">Download the PCAP file to solve Challenge 8.</a></p>
         <p>The flag for challenege 7 is:</p>
         <h3>cuvfurq_gur_cuvfure</h3>
     </div>
