Modified all to incorporate Challenge 9.

--- a/challenge9.html
+++ b/challenge9.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Healthcare Hacking Challenge 7</title>
+    <title>Healthcare Hacking Challenge 9</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="login-container">
-        <h2>Credentials</h2>
+        <h2>Monitor Device Credentials</h2>
         <form id="loginForm">
             <input type="text" id="username" placeholder="Username">
             <input type="password" id="password" placeholder="Password">
@@ -15,6 +15,6 @@
         </form>
     </div>
 
-    <script src="challenge7.js"></script>
+    <script src="challenge9.js"></script>
 </body>
 </html>
