--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             <ol>
                 <li><a href="challenge7.html">Go to Challenge 7</a></li>
             </ol>
+        </ul>
+        <ul>
+            <li><b>Challenge 9: The Vulnerable Device</b></li>
+            <ol>
+                <li><a href="challenge9.html">Go to Challenge 9</a></li>
+            </ol>
         </ul></p>
     </div>    
 </body>
