Updated authentication and C9 dashboard

--- a/c7answer.html
+++ b/c7answer.html
@@ -7,7 +7,7 @@
 
     <script>
         // Check if the "loggedIn" session key exists and is true
-        if (sessionStorage.getItem("loggedIn") !== "true") {
+        if (sessionStorage.getItem("challenge7_loggedIn") !== "true") {
             // If not, redirect back to the login page immediately
             window.location.href = "index.html";
         }
