CTF11 files and change to html code

--- a/c9answer.html
+++ b/c9answer.html
@@ -374,8 +374,8 @@
         
         <div class="file-info">
             <strong>Available Diagnostic Files:</strong><br>
-            📁 firmware_debug.log (47.2 KB)<br>
-            📁 system_trace.bin (12.8 KB)<br>
+            📁 <a http="/system/firmware/medicore_diagnostic.log">medicore_diagnostic.log (4 KB)</a><br>
+            📁 <a http="/system/firmware/medicoreFirmware.bin"></a>medicoreFirmware.bin (18 KB)<br>
             📁 backdoor_access.log (2.4 KB)
         </div>
         
