changed diagnostic log download link to ignore

--- a/c9answer.html
+++ b/c9answer.html
@@ -379,7 +379,7 @@
             📁 backdoor_access.log (2.4 KB)
         </div>
         
-        <a href="medicore_diagnostic.log" download="medicore_diagnostic.log" class="download-btn">Download Diagnostic Log</a>
+        <!--a href="/system/firmware/medicore_diagnostic.log" download="medicore_diagnostic.log" class="download-btn">Download Diagnostic Log</a> -->
         
         <p style="font-size: 0.9em; opacity: 0.7; margin-top: 15px;">
             <strong>Warning:</strong> This log contains sensitive system information<br>
