Changed link color so it isn't obvious

--- a/c9answer.html
+++ b/c9answer.html
@@ -240,6 +240,29 @@
             font-family: monospace;
             font-size: 14px;
         }
+        a:link {
+        color: white;
+        background-color: transparent;
+        text-decoration: none;
+        }
+
+        a:visited {
+        color: white;
+        background-color: transparent;
+        text-decoration: none;
+        }
+
+        a:hover {
+        color: white;
+        background-color: transparent;
+        text-decoration: none;
+        }
+
+        a:active {
+        color: white;
+        background-color: transparent;
+        text-decoration: none;
+        }
     </style>
 </head>
 <body>
