--- a/c9answer.html
+++ b/c9answer.html
@@ -402,14 +402,14 @@
             📁 backdoor_access.log (2.4 KB)
         </div>
         
-        <!--a href="/system/firmware/medicore_diagnostic.log" download="medicore_diagnostic.log" class="download-btn">Download Diagnostic Log</a> -->
+        <!--a href="/system/firmware/medicore_diagnostic.log" download="medicore_diagnostic.log" class="download-btn">Download Diagnostic Log</a> 
         
         <p style="font-size: 0.9em; opacity: 0.7; margin-top: 15px;">
             <strong>Warning:</strong> This log contains sensitive system information<br>
             File: medicore_diagnostic.log<br>
             MD5: a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6<br>
             Size: 47.2 KB
-        </p>
+        </p>-->
     </div>
 
     <script>
