Updating Challenge 16 files

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             <ol>
                 <li><a href="challenge9.html">Go to Challenge 9</a></li>
             </ol>
+        </ul>
+        <ul>
+            <li><b>Challenge 15: The Encrypted Notes</b></li>
+            <ol>
+                <li><a href="c15NurseSBAR.html">Challenge 15 Nurse Brain Sheet</a></li>
+            </ol>
         </ul></p>
     </div>    
 </body>
