--- a/Challenge16/index.html
+++ b/Challenge16/index.html
@@ -102,10 +102,10 @@ STATUS: <span class="red">VULNERABLE</span>
 
     <div class="section">
         <h2>DOWNLOAD CHALLENGE FILES</h2>
-        <a href="hl7_exploit_template.py" class="download-btn" download>🐍 Exploit Template</a>
-        <!--<a href="sample_hl7_message.txt" class="download-btn" download>📄 Sample HL7 Message</a>
         <a href="hl7_reference.txt" class="download-btn" download>📚 HL7 Reference</a>
-        <a href="challenge_brief.txt" class="download-btn" download>📋 Challenge Brief</a>-->
+        <a href="challenge_brief.txt" class="download-btn" download>📋 Challenge Brief</a>
+        <a href="hl7_exploit_template.py" class="download-btn" download>🐍 Exploit Template</a>
+        <a href="sample_hl7_message.txt" class="download-btn" download>📄 Sample HL7 Message</a>
     </div>
 
     <div class="section">
