--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Healthcare Hacking Challenges</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="list-text">
@@ -11,19 +11,19 @@
         <p><ul>
             <li><b>Challenge 7: The Rogue Website</b></li>
             <ol>
-                <li><a href="challenge7.html">Go to Challenge 7</a></li>
+                <li><a href="/Challenge7/challenge7.html">Go to Challenge 7</a></li>
             </ol>
         </ul>
         <ul>
             <li><b>Challenge 9: The Vulnerable Device</b></li>
             <ol>
-                <li><a href="challenge9.html">Go to Challenge 9</a></li>
+                <li><a href="/Challenge9/challenge9.html">Go to Challenge 9</a></li>
             </ol>
         </ul>
         <ul>
             <li><b>Challenge 15: The Encrypted Notes</b></li>
             <ol>
-                <li><a href="c15NurseSBAR.html">Challenge 15 Nurse Brain Sheet</a></li>
+                <li><a href="/Challenge15/c15NurseSBAR.html">Challenge 15 Nurse Brain Sheet</a></li>
             </ol>
         </ul></p>
     </div>    
