added /HCHCTF1 to each link.

--- a/Challenge9/challenge9.html
+++ b/Challenge9/challenge9.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Healthcare Hacking Challenge 9</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/HCHCTF1/style.css">
 </head>
 <body>
 
@@ -15,6 +15,6 @@
         </form>
     </div>
 
-    <script src="/Challenge9/challenge9.js"></script>
+    <script src="/HCHCTF1/Challenge9/challenge9.js"></script>
 </body>
 </html>
