--- a/Challenge7/challenge7.html
+++ b/Challenge7/challenge7.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Healthcare Hacking Challenge 7</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/HCHCTF1/style.css">
 </head>
 <body>
 
@@ -15,6 +15,6 @@
         </form>
     </div>
 
-    <script src="/Challenge7/challenge7.js"></script>
+    <script src="/HCHCTF1/Challenge7/challenge7.js"></script>
 </body>
 </html>
