updated index to include challenge 18.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul>
             <li><b>Challenge 18: The Web Interface Injection</b></li>
             <ol>
-                <li><a href="/HCHCTF1/Challenge15/c15NurseSBAR.html">Challenge 15 Nurse Brain Sheet</a></li>
+                <li><a href="/HCHCTF1/Challenge18/challenge18patient_monitor.html">Challenge 18 The Web Interface Injection</a></li>
             </ol>
         </ul></p>
     </div>    
