updating index for challenge 19

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             <ol>
                 <li><a href="/HCHCTF1/Challenge18/challenge18patient_monitor.html">Challenge 18 The Web Interface Injection</a></li>
             </ol>
+        </ul>
+        <ul>
+            <li><b>Challenge 19: The Insecure Chat</b></li>
+            <ol>
+                <li><a href="/HCHCTF1/Challenge19/chospital_chat_app.html">Challenge 19 The Insecure Chat</a></li>
+            </ol>
         </ul></p>
     </div>    
 </body>
