Updated title refrences in several HTML files to match challenge names.

--- a/Challenge7/challenge7.html
+++ b/Challenge7/challenge7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Healthcare Hacking Challenge 7</title>
+    <title>Challenge 7: The Rogue Website</title>
     <link rel="stylesheet" href="/HCHCTF1/style.css">
 </head>
 <body>
