--- a/Challenge9/challenge9.html
+++ b/Challenge9/challenge9.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Healthcare Hacking Challenge 9</title>
+    <title>Challenge 9: The Vulnerable Device</title>
     <link rel="stylesheet" href="/HCHCTF1/style.css">
 </head>
 <body>
