--- a/index.html
+++ b/index.html
@@ -6,36 +6,36 @@
 </head>
 <body>
     <div class="list-text">
-        <p><h2>Welcome to the Healthcare Hacking Challenges!</h2></p>
+        <p><h2>Welcome to the Saintcon Hosptial Hacking Challenges!</h2></p>
         <p>Embark on a journey to uncover hidden clues and solve puzzles related to healthcare security. </p><p>Start by accessing the CTF and following the questions repective links below.</p>
         <p><ul>
             <li><b>Challenge 7: The Rogue Website</b></li>
             <ol>
-                <li><a href="/HCHCTF1/Challenge7/challenge7.html">Go to Challenge 7</a></li>
+                <li><a href="/HCHCTF1/Challenge7/challenge7.html">Challenge 7: The Rogue Website</a></li>
             </ol>
         </ul>
         <ul>
             <li><b>Challenge 9: The Vulnerable Device</b></li>
             <ol>
-                <li><a href="/HCHCTF1/Challenge9/challenge9.html">Go to Challenge 9</a></li>
+                <li><a href="/HCHCTF1/Challenge9/challenge9.html">Challenge 9: The Vulnerable Device</a></li>
             </ol>
         </ul>
         <ul>
             <li><b>Challenge 15: The Encrypted Notes</b></li>
             <ol>
-                <li><a href="/HCHCTF1/Challenge15/c15NurseSBAR.html">Challenge 15 Nurse Brain Sheet</a></li>
+                <li><a href="/HCHCTF1/Challenge15/c15NurseSBAR.html">Challenge 15: The Encrypted Notes</a></li>
             </ol>
         </ul>
         <ul>
             <li><b>Challenge 18: The Web Interface Injection</b></li>
             <ol>
-                <li><a href="/HCHCTF1/Challenge18/challenge18patient_monitor.html">Challenge 18 The Web Interface Injection</a></li>
+                <li><a href="/HCHCTF1/Challenge18/challenge18patient_monitor.html">Challenge 18: The Web Interface Injection</a></li>
             </ol>
         </ul>
         <ul>
             <li><b>Challenge 19: The Insecure Chat</b></li>
             <ol>
-                <li><a href="/HCHCTF1/Challenge19/hospital_chat_app.html">Challenge 19 The Insecure Chat</a></li>
+                <li><a href="/HCHCTF1/Challenge19/hospital_chat_app.html">Challenge 19: The Insecure Chat</a></li>
             </ol>
         </ul></p>
     </div>    
