--- a/Challenge18/challenge18patient_monitor.html
+++ b/Challenge18/challenge18patient_monitor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SaintCon Hospital - Patient Monitoring System</title>
+    <title>hallenge 18: The Web Interface Injection</title>
     <style>
         * {
             margin: 0;
