--- a/Challenge19/hospital_chat_app.html
+++ b/Challenge19/hospital_chat_app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SecureHealthChat™</title>
+    <title>Challenge 19: The Insecure Chat</title>
     <style>
         * {
             margin: 0;
