Removed all the answers from the MD files and removed any extra files that are not needed during the challenge.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,22 @@
             </ol>
         </ul>
         <ul>
+            <li><b>Challenge 12: The Interactive Exploit</b></li>
+            <ol>
+                <li><a href="/HCHCTF1/Challenge12/c12MedicalDevice.html">Challenge 12: The Interactive Exploit</a></li>
+            </ol>
+        </ul>
+        <ul>
+        <ul>
             <li><b>Challenge 15: The Encrypted Notes</b></li>
             <ol>
                 <li><a href="/HCHCTF1/Challenge15/c15NurseSBAR.html">Challenge 15: The Encrypted Notes</a></li>
+            </ol>
+        </ul>
+        <ul>
+            <li><b>Challenge 16: The HL7 Exploit</b></li>
+            <ol>
+                <li><a href="/HCHCTF1/Challenge16/index.html">Challenge 16: The HL7 Exploit</a></li>
             </ol>
         </ul>
         <ul>
