--- a/Challenge9/c9answer.html
+++ b/Challenge9/c9answer.html
@@ -398,7 +398,7 @@
         <div class="file-info">
             <strong>Available Diagnostic Files:</strong><br>
             📁 <a href="system/firmware/medicore_diagnostic.log">medicore_diagnostic.log (4 KB)</a><br>
-            📁 <a href="system/firmware/medicoreFirmware.bin">medicoreFirmware.bin (18 KB)</a><br>
+            📁 <a href="system/firmware/medicoreFirmware">medicoreFirmware.bin (18 KB)</a><br>
             📁 backdoor_access.log (2.4 KB)
         </div>
         
